--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Start Page</title>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    </head>
-    <body>
-        <h1>Hello World!</h1>
-    </body>
+<head>
+    <title>Add a Course!</title>
+    <link rel="stylesheet" type="text/css" href="/CSS/addStudents.css">
+</head>
+<body>
+<nav>
+    <a href="http://localhost:9090/addStudents">Add a student</a>
+    <a href="http://localhost:9090/addCourses">Add a course</a>
+    <a href="http://localhost:9090/Students">Students</a>
+    <a href="http://localhost:9090/Attendance">Sign up for courses</a>
+</nav>
+<h2>Welcome!</h2>
+</body>
 </html>
